--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:fontFamily="sans-serif-black"
         android:gravity="center"
         android:text="Привет!"
+        android:textColor="#BDBDBD"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,6 +32,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="10dp"
         android:fontFamily="serif"
+        android:textColor="#BDBDBD"
         android:gravity="center"
         android:text="Я хотел бы познакомить тебя с моим первым приложением, следует только нажать кнопку! "
         android:textSize="25sp"
