--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-  <style name="Theme.Study" parent="Base.Theme.Study">
+  <style name="Theme.Study" parent="Theme.Material3.DayNight.NoActionBar">
     <!-- Transparent system bars for edge-to-edge. -->
     <item name="android:navigationBarColor">@android:color/transparent</item>
     <item name="android:statusBarColor">@android:color/transparent</item>
